--- a/projects/elements/src/select/select.css
+++ b/projects/elements/src/select/select.css
@@ -141,7 +141,7 @@
 }
 
 :host([layout*='horizontal'][size]) ::slotted(label) {
-  padding-top: var(--nve-ref-size-100) !important;
+  padding-block-start: var(--nve-ref-size-100) !important;
   align-self: start !important;
 }
 
